<resources>
    <string name="app_name">FlightsApp</string>

    <string name="action_settings">Settings</string>

    <string name="fetch_information">Fetch Flights Information</string>
    <string name="fetching_data">Fetching flights information. Please wait&#8230;</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="price">Price</string>
    <string name="airline_name">Airline Name</string>
    <string name="origin_name">Origin Name</string>
    <string name="destination_name">Destination Name</string>
    <string name="seat_class">Seat Class</string>
    <string name="airline_code">Code</string>
    <string name="total_time">Total Time</string>
    <string name="no_internet_connection">Please check your internet connection.</string>\
    <string name="sort_by">Sort By</string>
    <string name="departure">Departure</string>
    <string name="rate">Rate</string>
    <string name="duration">Duration</string>
    <string name="arrival">Arrival</string>
</resources>
