<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlFlightShortInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/tvTakeOffTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvLandingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTakeOffTime"
                android:text="@string/end_time"
                android:textSize="14sp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/tvAirLineCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airline_code"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tvAirLineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAirLineCode"
                android:text="@string/airline_name"
                android:textSize="14sp" />
        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlFlightsExtraInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlFlightShortInfo"
        android:padding="5dp"
        android:visibility="gone"
        android:background="@color/pure_white">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/tvOriginName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvOriginName"
                android:text="@string/start_time"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tvAirLineName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airline_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAirLineName1"
                android:text="@string/total_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/tvDestinationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDestinationName"
                android:text="@string/end_time"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>